Fix ordered-list style in articles on mobiles

--- a/docs/_sass/_style.scss
+++ b/docs/_sass/_style.scss
@@ -444,7 +444,9 @@ article {
 }
 
 @media (max-width: 480px) {
-  article ul { padding-left: 20px; }
+  article {
+    ul, ol { padding-left: 20px }
+  }
 }
 
 @media (max-width: 568px) {
